# PublicProjects

./: .gitignore  README.md
AI-Agentic/google-trends/: 2025-02-18-BE-4.html  2025-02-18-BE-4.json  2025-02-18-US-4.html  2025-02-18-US-4.json  Dockerfile  README.md  main.py  requirements.txt  schema.py  trends copy.json
AI/download-llama-to-azure-storage/: README.md  main.sh  run.sh
AI/rl-pid-mpc/: README.md  main.py
AI/stable-diffusion/: .gitignore  README.md  infer.py  main.ipynb  the-last-ben.ipynb
Azure-Bing-Search/: AzureBingSearchClient.js
Azure-Cognitive-Services/OCR/: package.json
Azure-Cognitive-Services/Translator/: out_sentences.txt  package-lock.json
Azure-Container-Apps/AI-Model-YoloV5/: Dockerfile  README.md  main.py
Azure-Container-Apps/AI-Model-YoloV5-Dapr-Queue/: Dockerfile  README.md  index.ts  main.py  package.json  requirements.txt
Azure-EventHub/Receiver/: config.tpl.js
Azure-EventHub/Sender/: README.txt  package-lock.json
Azure-EventHub/StreamSample/: package.json
Azure-IoT-Edge/Dapr-Hello-World/: .gitignore
Azure-IoT-Edge/Typescript-and-Python-Modules-Communicating/: .env.template
Azure-Logic-Apps/SQLStorageProvider/: host.json
Azure-Storage/: AzureBlobQueueStorage.js
Azure/CosmosDB/: README.md  package.json
Azure/Utils/: generate-sas-token.js
Dapr/AutoScalingHTTP/: README.md
Data/cdc-capture/: 0-demo.sql  2-enable-cdc.sql  3-add-new-data.sql  4-add-new-data-2.sql  README.md
Data/cdc-capture-dagster/: 1-schema.sql  4-add-new-data-2.sql  5-truncate.sql  README.md
Data/cdc-capture-dagster/dagster-cdc/: README.md  TODO.md  pyproject.toml
Data/cdc-capture-dagster/dagster-cdc/dagster_cdc/: __init__.py  definitions.py
Data/cdc-capture-dagster/dagster-cdc/dagster_cdc/assets/: __init__.py  delta_assets.py
Data/cdc-capture-dagster/dagster-cdc/dagster_cdc/resources/: sql_server_cdc.py
Data/cdc-capture-dagster/dagster-cdc/dagster_cdc/utils/: delta_helpers.py
Data/cdc-capture/cdc-dagster/: .gitignore  README.md  TODO.md  assets.py.bkp  pyproject.toml
Data/cdc-capture/cdc-dagster/cdc_dagster/resources/: __init__.py
(+356 files in other folders)
