[project]
name = "dagster-cdc"
version = "0.1.0"
description = "A project for managing CDC updates from SQL Server to Delta Lake."
authors = [
    {name = "Xavier Geerinck", email = "xavier.geerinck@gmail.com"}
]
license = "MIT"
dependencies = [
    "dagster",
    "dagster-deltalake",
    "pandas",
    "sqlalchemy",
    "pyodbc",
    "delta-spark",
    "dagster-deltalake-polars>=0.26.7"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.dagster]
assets = ["dagster_cdc.assets.delta_assets"]
resources = ["dagster_cdc.resources.sql_server_cdc"]
